--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ images/.DS_Store
 images/works/.DS_Store
 .DS_Store
 images/.DS_Store
+.Rhistory
+images/.DS_Store
+images/works/.DS_Store
+images/.DS_Store
+images/works/.DS_Store
